--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
     <link rel="stylesheet" href="https://daneden.github.io/animate.css/animate.min.css"><link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200&display=swap" rel="stylesheet">
+    
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -25,14 +29,14 @@
                                 <h4 class="price">S/FREE</h4>
                             </div>
                             <ul class="features">
-                            <li class="true">Variedad de artículos</li>
+                            <li class="true">Artículos limitados</li>
                             <li class="true">Soporte técnico 24/7</li>
-                            <li class="true">Audios y multimedia</li>
+                            <li class="false">Audios y multimedia</li>
                             <li class="false">Filtro de contenido</li>
-                            <li class="false">Contenido Extra</li>
+                            <li class="false">(Documentales)</li>
                             </ul>
                             <div class="btn-box">
-                                <a href="https://memorytravelbusiness.github.io/inicio-memorytravel/" class="theme-btn">EMPEZAR</a>
+                                <a href="https://memorytravelbusiness.github.io/inicio/" class="theme-btn">EMPEZAR</a>
                             </div>
                         </div>
                     </div>
@@ -45,17 +49,17 @@
                             </div>
                             <div class="price-box">
                                 <div class="title">ESTÁNDAR</div>
-                                <h4 class="price">S/20</h4>
+                                <h4 class="price">S/20 <a class="hola" style="color:#00000091">(mensual)</a></h4>
                             </div>
                             <ul class="features">
-                            <li class="true">Variedad de artículos</li>
+                            <li class="true">Artículos ilimitados</li>
                             <li class="true">Soporte técnico 24/7</li>
                             <li class="true">Audios y multimedia</li>
                             <li class="false">Filtro de contenido</li>
-                            <li class="false">Contenido Extra</li>
+                            <li class="false">(Documentales)</li>
                             </ul>
                             <div class="btn-box">
-                                <a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-2GH958056F706835YMMVDLVQ" class="theme-btn">COMPRAR</a>
+                                <a href="https://www.patreon.com/join/9720434/checkout?rid=9325969" class="theme-btn">COMPRAR</a>
                             </div>
                         </div>
                     </div>
@@ -68,17 +72,17 @@
                             </div>
                             <div class="price-box">
                                 <div class="title">PREMIUM</div>
-                                <h4 class="price">S/40</h4>
+                                <h4 class="price">S/40 <a class="hola" style="color:#00000091">(mensual)</a></h4>
                             </div>
                             <ul class="features">
-                            <li class="true">Variedad de artículos</li>
+                            <li class="true">Artículos ilimitados</li>
                             <li class="true">Soporte técnico 24/7</li>
                             <li class="true">Audios y multimedia</li>
-                            <li class="false">Filtro de contenido</li>
-                            <li class="false">Contenido Extra</li>
+                            <li class="true">Filtro de contenido</li>
+                            <li class="true">(Documentales)</li>
                             </ul>
                             <div class="btn-box">
-                                <a href="https://www.paypal.com/webapps/billing/plans/subscribe?plan_id=P-0MS70951B89711105MMVFMZA" class="theme-btn">COMPRAR</a>
+                                <a href="https://www.patreon.com/join/9720434/checkout?rid=9327800" class="theme-btn">COMPRAR</a>
                             </div>
                         </div>
                     </div>
